admin btn added

--- a/src/app/admin-login/adminpage/adminpage.component.html
+++ b/src/app/admin-login/adminpage/adminpage.component.html
@@ -104,6 +104,18 @@
                 <td>
                     {{data.date}}
                 </td>
+                <td style="min-height: 100vh;">
+                    <ul class="list-inline">
+                        <li class="list-inline-item m-2">
+                            <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip"
+                                data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                        </li>
+                        <li class="list-inline-item m-2">
+                            <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip"
+                                data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
+                        </li>
+                    </ul>
+                </td>
             </tr>
 
         </table>
