--- a/src/app/colleges/ceg-guindy/ceg-guindy-details/ceg-guindy-details.component.html
+++ b/src/app/colleges/ceg-guindy/ceg-guindy-details/ceg-guindy-details.component.html
@@ -117,8 +117,129 @@
                                 <select class="form-control" formControlName="course" style="max-width: 400px;"
                                     [ngClass]="{ 'is-invalid': submitted && f.course.errors }">
                                     <option value="">Choose...</option>
-                                    <option value="M.E Applied Electronics">M.E Applied Electronics</option>
-                                    <option value="M.E COMMUNICATION SYSTEMS">M.E Communicaton Systems</option>
+                                    <option value="M.E Applied Electronics (4001)">M.E Applied Electronics (4001)
+                                    </option>
+                                    <option value="M.E Communication Systems (4004)">M.E Communication Systems (4004)
+                                    </option>
+                                    <option value="M.E Computer Integrated Manufacturing (2003)">M.E Computer Integrated
+                                        Manufacturing (2003)
+                                    </option>
+                                    <option value="M.E Computer Science and Engineering (4005)">M.E Computer Science and
+                                        Engineering (4005)
+                                    </option>
+                                    <option value="M.E Construction Engg. and Management (1007)">M.E Construction Engg.
+                                        and Management (1007)
+                                    </option>
+                                    <option value="M.E Control & Instrumentation Engineering (3003)">M.E Control &
+                                        Instrumentation Engineering (3003)
+                                    </option>
+                                    <option value="M.E Energy Engineering (2006)">M.E Energy Engineering (2006)
+                                    </option>
+                                    <option value="M.E Engineering Design (2001)">M.E Engineering Design (2001)
+                                    </option>
+                                    <option value="M.E Environmental Engineering (1001)">M.E Environmental Engineering
+                                        (1001)
+                                    </option>
+                                    <option value="M.E High Voltage Engineering (3002)">M.E High Voltage Engineering
+                                        (3002)
+                                    </option>
+                                    <option value="M.E Hydrology and Water Resources Engg. (1003)">M.E Hydrology and
+                                        Water Resources Engg. (1003)
+                                    </option>
+                                    <option value="M.E Industrial Engineering (2002)">M.E Industrial Engineering (2002)
+                                    </option>
+                                    <option value="M.E Internal Combustion Engineering (2004)">M.E Internal Combustion
+                                        Engineering (2004)
+                                    </option>
+                                    <option value="M.E Irrigation Water Management (1006)">M.E Irrigation Water
+                                        Management (1006)
+                                    </option>
+                                    <option value="M.E Medical Electronics (4002)">M.E Medical Electronics (4002)
+                                    </option>
+                                    <option value="M.E Power Electronics & Drives (3004)">M.E Power Electronics & Drives
+                                        (3004)
+                                    </option>
+                                    <option value="M.E Power Systems Engineering (3001)">M.E Power Systems Engineering
+                                        (3001)
+                                    </option>
+                                    <option value="M.E Thermal Engineering (2005)">M.E Thermal Engineering
+                                        (2005)
+                                    </option>
+                                    <option value="M.E Remote Sensing and Geomatics (1010)">M.E Remote Sensing and
+                                        Geomatics (1010)
+                                    </option>
+                                    <option value="M.E Software Engineering (4006)">M.E Software Engineering (4006)
+                                    </option>
+                                    <option value="M.E Soil Mechanics and Foundation Engg. (1004)">M.E Soil Mechanics
+                                        and Foundation Engg. (1004)
+                                    </option>
+                                    <option value="M.E Structural Engineering (1002)">M.E Structural Engineering (1002)
+                                    </option>
+                                    <option value="M.E Transportation Engineering (1005)">M.E Transportation
+                                        Engineering (1005)
+                                    </option>
+                                    <option value="M.Tech. - Laser and Electro Optical Engineering (4007)">M.Tech. -
+                                        Laser and Electro Optical Engineering (4007)
+                                    </option>
+                                    <option value="M.E Environmental Management (1309)">M.E Environmental Management
+                                        (1309)
+                                    </option>
+                                    <option value="M.E Printing and Packaging Technology (2310)">M.E Printing and
+                                        Packaging Technology (2310)
+                                    </option>
+                                    <option value="M.E Manufacturing Systems and Management (2314)">M.E Manufacturing
+                                        Systems and Management (2314)
+                                    </option>
+                                    <option value="M.E Solar Energy (2332)">M.E Solar Energy (2332)</option>
+                                    <option value="M.E Embedded System Technologies (3306)">M.E Embedded System
+                                        Technologies (3306)</option>
+                                    <option value="M.E Biomedical Engineering (4312)">M.E Biomedical Engineering (4312)
+                                    </option>
+                                    <option value="M.E VLSI Design (4308)">M.E VLSI Design (4308)</option>
+                                    <option value="M.E Power Engineering and Management (3314)">M.E Power Engineering
+                                        and Management (3314)</option>
+                                    <option value="M.E Computer Science and Engineering(specialization
+                                    in Big Data Analytics) (4340)">M.E Computer Science and Engineering(specialization
+                                        in Big Data Analytics) (4340)
+                                    </option>
+                                    <option value="M.E Computer Science and Engineering (specialization">M.E in
+                                        Operations Research) (4311)</option>
+                                    <option value="M.E Quality Engineering and Management (2309)">M.E Quality
+                                        Engineering and Management (2309)</option>
+                                    <option value="M.E Information Technology (specialization in Multimedia)  (4342)">
+                                        M.E Information Technology (specialization in Multimedia) (4342)</option>
+                                    <option value="M.E Information Technology (4310)">M.E Information Technology (4310)
+                                    </option>
+                                    <option value="M.E Computer Integrated Manufacturing (2603) ">M.E Computer
+                                        Integrated Manufacturing (2603)
+                                    </option>
+                                    <option value="M.E Quality Engineering and Management (2609)">M.E Quality
+                                        Engineering and Management (2609)
+                                    </option>
+                                    <option value="M.E Computer Aided Design (2608)">M.E Computer Aided Design (2608)
+                                    </option>
+                                    <option value="M.E Product Design and Development (2607)">M.E Product Design and
+                                        Development (2607)
+                                    </option>
+                                    <option value="M.E Internal Combustion Engineering (2604)">M.E Internal Combustion
+                                        Engineering (2604)
+                                    </option>
+                                    <option value="M.E Energy Engineering (2606)">M.E Energy Engineering (2606)
+                                    </option>
+                                    <option value="M.E Computer Science and Engineering (specialization
+                                    in Operations Research) (4611)">M.E Computer Science and Engineering
+                                        (specialization
+                                        in Operations Research) (4611)
+                                    </option>
+                                    <option value="M.E Power Electronics & Drives (3604)">M.E Power Electronics & Drives
+                                        (3604)
+                                    </option>
+                                    <option value="M.E Power Systems Engineering (3601)">M.E Power Systems Engineering
+                                        (3601)
+                                    </option>
+                                    <option value="M.E Embedded System Technologies (3606)">M.E Embedded System
+                                        Technologies (3606)
+                                    </option>
                                 </select>
                                 <div *ngIf="submitted && f.course.errors" class="invalid-feedback">
                                     <div *ngIf="f.course.errors.required">Course is required</div>
@@ -277,15 +398,15 @@
                                 <div class="inputs" style="max-width: 200px;">
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" formControlName="stipend"
-                                            name="stipend" value="Yes" (change)="stipend_eligible($event)"
+                                            name="stipend" value="Paid" (change)="stipend_eligible($event)"
                                             [ngClass]="{ 'is-invalid': submitted && f.stipend.errors }">
-                                        <label class="form-check-label">Yes</label>
+                                        <label class="form-check-label">Paid</label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" formControlName="stipend"
-                                            name="stipend" value="No" (change)="stipend_eligible($event)"
+                                            name="stipend" value="Unpaid" (change)="stipend_eligible($event)"
                                             [ngClass]="{ 'is-invalid': submitted && f.stipend.errors }">
-                                        <label class="form-check-label">No</label>
+                                        <label class="form-check-label">Unpaid</label>
                                     </div>
                                 </div>
                             </td>
@@ -382,9 +503,10 @@
                         <tr>
                             <td id="detail-name" class="pt-2"></td>
                             <td id="detail-gama" class="pt-3">
+                                <button class="btn btn-primary m-3" routerLink="/ceg-guindy">Back</button>
                                 <button class="btn btn-secondary m-3" type="reset" (click)="onReset()">Feed</button>
                                 <button class="btn btn-primary m-3">Feed Next</button>
-                                <button class="btn btn-secondary m-3" (click)="generate()">Generate</button>
+                                <button class="btn btn-secondary m-3" (click)="nextpage()">Generate</button>
                             </td>
                         </tr>
 
@@ -395,10 +517,3 @@
         </div>
     </div>
 </div>
-
-
-<app-anna-university-tirunelveli-viewform *ngIf="Last"></app-anna-university-tirunelveli-viewform>
-
-
-<!-- gate={{Gate}} -->
-<!-- attendance={{Attendance}} -->
