--- a/src/app/colleges/ceg-guindy/ceg-guindy.component.html
+++ b/src/app/colleges/ceg-guindy/ceg-guindy.component.html
@@ -78,13 +78,10 @@
             <div class="college-btn" style="text-align: center;">
 
                 <button class="btn btn-outline-primary mt-4" style=" border-radius: 15px;width: 100px; height: 50px;"
-                    (click)="nxtpage()">
+                    routerLink="/ceg-guindy-details">
                     Next
                 </button>
             </div>
         </div>
     </div>
 </div>
-
-
-<app-ceg-guindy-details *ngIf="Next"></app-ceg-guindy-details>
